--- a/Tic Tac Toe/src/styles/index.css
+++ b/Tic Tac Toe/src/styles/index.css
@@ -7032,7 +7032,11 @@ body {
   border: 6px solid #2c3e50;
   border-radius: 10px;
   display: grid;
-  grid-template: repeat(3, 1fr)/repeat(3, 1fr); }
+  grid-template: repeat(3, 1fr)/repeat(3, 1fr);
+  font-size:60px;
+  text-align:center;
+  
+}
 
 .square {
   background: transparent;
