--- a/Tic Tac Toe/src/styles/index.css
+++ b/Tic Tac Toe/src/styles/index.css
@@ -7025,31 +7025,28 @@ body {
 
 .board {
   width: 40vw;
-  height: 40vw;
+  height: 40vh;
   margin: 0 auto;
-  background-color: #34495e;
-  color: #fff;
+  background-color: darkgrey;
+  color: black;
   border: 6px solid #2c3e50;
   border-radius: 10px;
   display: grid;
-  grid-template: repeat(3, 1fr)/repeat(3, 1fr);
-  font-size:60px;
-  text-align:center;
-  
+  grid-template: repeat(3, 1fr) /repeat(3, 1fr) ; 
+  text-align: center;
+  font-size: 50px;
+
+
+
 }
 
-.square {
-  background: transparent;
-  color: #FFF;
-  border: 1px solid #999;
-  font-size: 5vw;
-  font-weight: bold;
-  text-align: center;
-  border: 2px solid #2c3e50;
-  border-radius: 2px;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+.resetbtn{
+  margin:50px 0 0 300px;
+  width: 10vw;
+
+}
+
+
 
 .square:focus {
   outline: none; }
