--- a/blog-yasmin/src/App.css
+++ b/blog-yasmin/src/App.css
@@ -2,3 +2,17 @@
   text-align: center;
 }
 
+nav li{
+  display:inline;
+  text-decoration: none;
+  padding:50px;
+}
+
+p{
+  background-color:lightgray;
+  width: 80%;
+  font-size: 30px;
+  padding: 20px;
+  height:100px;
+  margin:50px 0 0 50px;
+}
