setting the form

--- a/blog-yasmin/src/App.css
+++ b/blog-yasmin/src/App.css
@@ -4,12 +4,16 @@
 
 li{
   display:inline;
-  text-decoration: none;
+  
   padding:50px;
 }
 
+.link{
+  text-decoration: none;
+}
+
 p{
-  background-color:lightgray;
+  background-color:aliceblue;
   width: 80%;
   font-size: 30px;
   padding: 20px;
@@ -43,7 +47,8 @@ label{
   
 }
 .box{
-  margin-top:30px;
+  padding-top:18px;
+  text-align: center
 
   
 }
@@ -60,3 +65,13 @@ button{
 textarea{
   width: 70%;
 }
+
+ /*  show current posts component */
+
+
+ span{
+   height:300px;
+   width: 60%;
+   background-color: aliceblue;
+   margin-bottom: 50px;
+ }
