--- a/Tic Tac Toe/src/styles/index.css
+++ b/Tic Tac Toe/src/styles/index.css
@@ -7032,9 +7032,13 @@ body {
   border: 6px solid #2c3e50;
   border-radius: 10px;
   display: grid;
-  grid-template: repeat(3, 1fr)/repeat(3, 1fr);
-font-size: 35px; }
+   grid-template: repeat(3, 1fr)/repeat(3, 1fr); 
+  /* grid-template-columns: 200px 200px 200px; */
+font-size: 35px; 
+ 
+}
 
+  
 .square {
   background: transparent;
   color: #FFF;
@@ -7063,4 +7067,10 @@ font-size: 35px; }
     margin: auto; 
     padding:5px;   
   
+  }
+
+  .boxx{
+    border: 1px solid black;
+  text-align: center;
+  font-size: 30px;
   }
